--- a/wx/install.htm
+++ b/wx/install.htm
@@ -55,6 +55,8 @@ $(function() {
 按照下面介绍的方法安装本工具之后，在微信群页面点击按钮，即可显示出用户的真实身份。
 <br><br>
 <span style="color:green">仅适用于“二七班西师附小”微信群 :)</span>
+<br><br>
+<span style="color:red">目前实测只在 Chrome 浏览器下可以正常使用，在 360 安全浏览器、IE8、Firefox 浏览器中无法使用，其它浏览器尚未测试。</span>
 
 <h3>IE 系列浏览器</h3>
 
